Refactor and enhance application security and functionality
- Removed ChatEnterFilter as it was no longer needed.
- Updated LoginCheckFilter to improve URL patterns and session validation.
- Simplified LoginSessionFilter session checks.
- Added JSON ignore annotation to MemberUser's password field.
- Enhanced ChatRepository to use named parameters for clarity.
- Modified UserRepository to separate user ID and password retrieval.
- Updated ChatService to streamline chat room existence checks and error handling.
- Refactored EmailService to use SecureRandom for key generation and improved email sending logic.
- Simplified ProductService methods for better readability and added ownership checks.
- Improved ProfileService image upload and deletion logic, ensuring security against path traversal.
- Added regression tests to validate security measures and functionality.
- Updated README with setup instructions and removed outdated menu items.
- Added application.yml for configuration management and environment variable support.
- Created password-hash.sql for database schema updates.
- Added VSCode settings for Java null analysis.